06/02/2020
- BUG: fixed issues with persistent messages after quitting and then starting a new game
- TWEAK: can no longer fire ranged weapon with enemies nearby
- BUG: fixed issue with equipping two-handed/offhand items

09/02/2020
- GUI: options are now properly wrapped if they are longer than the max window width
- GUI: improved manual code. text is now wrapped dynamically, page display is cleaner and pages can be scrolled up & down

10/02/2020
- BUG: fixed issue with options wrapping

13/02/2020
- BUG: AV was not properly calculated
- GUI: (e) now opens menu with only equippable items
- BUG: Updated act_status_mod to use now Enum system
- MISC: fixed some strings, tweaked exertion feedback

14/02/2020
- AI: Dung Beatles no longer charge if a wall is between player and them

16/02/2020
- GAMEPLAY: tweaked exertion stats; moved exertion multipliers/divisors to global cfg file
- ITEMS: added option to wield specific two-handed weapons in one hand (for a penalty)
- MISC: verb declination now supports adverbs

17/02/2020
- refactored ranged attack system

04/03/2021
- ITEMS: added throwing daggers
- MAPGEN: prep to properly implemented dlvl-sensitive level-generation
- MISC: some flavor-text tweaks and spelling-fixes
- GUI: Description window now shows items on the floor if they are hidden by a NPC
- GUI: Made dynamic wrapping more robust when dealing with longer lists within a single paragraph