@@ -19,7 +19,7 @@ def distance_between_pos(x1, y1, x2, y2, rounding=True):
     return distance
 
 
-def line_between_pos(x1:int, y1:int, x2:int, y2:int, inclusive=False):
+def line_between_pos(x1:int, y1:int, x2:int, y2:int, include_start:bool=False, include_target:bool=False):
     """
     Draws a line from the starting position to the end position and returns all positions in between as a list.
     List does not include start/end pos by default.
@@ -29,20 +29,19 @@ def line_between_pos(x1:int, y1:int, x2:int, y2:int, inclusive=False):
     dist = distance_between_pos(x1, y1, x2, y2)
     x, y = x1, y1
     pos_list = []
-    if inclusive:
+    if include_start:
         pos_list.append((x,y))
-    for s in range(dist):
+    for i in range(dist):
         dir = direction_between_pos(x, y, x2, y2)
         x += dir[0]
         y += dir[1]
-        if (x, y) == (x2, y2) and not inclusive:
+        if (x, y) == (x2, y2) and not include_target:
             break
         pos_list.append((x,y))
     return pos_list
 
-
-def free_line_between_pos(x1, y1, x2, y2, game:Game, inclusive:bool=False, ignore_ents=False):
-    pos_list = line_between_pos(x1, y1, x2, y2, inclusive=inclusive)
+def free_line_between_pos(x1, y1, x2, y2, game:Game, include_start:bool=False, include_target:bool=False, ignore_ents=False):
+    pos_list = line_between_pos(x1, y1, x2, y2, include_start=include_start, include_target=include_target)
     ents = game.walk_blocking_ents if not ignore_ents else []
     for pos in pos_list:
         if game.map.is_blocked(*pos, ents):
